--- a/sass/utils/_helpers.scss
+++ b/sass/utils/_helpers.scss
@@ -93,7 +93,7 @@ section {
   left: 0;
 }
 
-.single .page-title-large {
+.page-title-large {
   min-height: 450px;
   padding: 240px 0 0;
   @include media(mobile) {
